--- a/Backend/deployment.yaml
+++ b/Backend/deployment.yaml
@@ -29,24 +29,24 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
-        livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 3000
-          initialDelaySeconds: 2
-          periodSeconds: 5
-        readinessProbe:
-          httpGet:
-            path: /ready
-            port: 3000
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          successThreshold: 1
-        startupProbe:
-          httpGet:
-            path: /started
-            port: 3000
-          initialDelaySeconds: 0
-          periodSeconds: 10
-          failureThreshold: 30
+        # livenessProbe:
+        #   httpGet:
+        #     path: /healthz
+        #     port: 3000
+        #   initialDelaySeconds: 2
+        #   periodSeconds: 5
+        # readinessProbe:
+        #   httpGet:
+        #     path: /ready
+        #     port: 3000
+        #   initialDelaySeconds: 5
+        #   periodSeconds: 5
+        #   successThreshold: 1
+        # startupProbe:
+        #   httpGet:
+        #     path: /started
+        #     port: 3000
+        #   initialDelaySeconds: 0
+        #   periodSeconds: 10
+        #   failureThreshold: 30
 
